test_src/compiler_errors/literals/IntTooLargeError1.b
class IntTooLargeError1 {
    void test() {
        println(2147483648);
    }
}
